--- a/src/main/resources/templates/admin/files.html
+++ b/src/main/resources/templates/admin/files.html
@@ -150,41 +150,44 @@
 
                 <h4>Загруженные файлы</h4>
 
-                <!-- ELEMENT START -->
-                <div class="media-object stack-for-small" id="uploadFiles" th:each="f : ${fileInform}" style="border: solid 1px lightgray; padding: 10px; background-color: whitesmoke">
-                    <div class="media-object-section">
-                        <!--<video controls width="300" muted class="thumbnail">
-                            <source th:src="'/saved/' + ${f.getFileName()}" type="video/mp4"/>
-                        </video>-->
-                        <video class="thumbnail" width="300" height="200"  muted controls="controls">
-                            <source th:src="${f.getFullPath()}" type="video/mp4" />
-                        </video>
-                    </div>
-                    <div class="media-object-section" style="position: relative">
-                        <div class="medium-12">
-                            <ul class="spisok">
-                                <li style="font-size: 14px">Имя: <span th:text="${f.getFileName()}"></span></li>
-                                <li style="font-size: 14px">Дата: <span th:text="${f.getPlacedAt()}"></span></li> <!-- исправить на дату записи видео в базе -->
-                                <li style="font-size: 14px">Размер файла: <span th:text="${f.getFileSize()}"></span></li> <!-- Размер сделать в гигабайтах -->
-                            </ul>
+                <div id="array-structure">
+                    <!-- ELEMENT START -->
+                    <div class="media-object stack-for-small" th:each="f : ${fileInform}" th:id="'element_' + ${f.getId()}" style="border: solid 1px lightgray; padding: 10px; background-color: whitesmoke">
+                        <div class="media-object-section medium-6">
+                            <!--<video controls width="300" muted class="thumbnail">
+                                <source th:src="'/saved/' + ${f.getFileName()}" type="video/mp4"/>
+                            </video>-->
+                            <video class="thumbnail" width="300" height="200"  muted controls="controls">
+                                <source th:src="${f.getFullPath()}" type="video/mp4" />
+                            </video>
                         </div>
-                        <div class="small-12 row button-group" style="position: absolute; bottom: 10px">
-                            <div class="small-6 column">
-                                <form th:method="POST" th:action="@{/admin/files/get/photo/{id}(id=${f.getId()})}" th:object="${f}">
-                                    <input type="submit" value="Фото" class="submit small button disabled" th:if="${f.getImages().size()} == 0">
-                                    <input type="submit" value="Фото" class="submit small button" th:if="${f.getImages().size()} != 0">
-                                </form>
+                        <div class="media-object-section" style="position: relative">
+                            <div class="medium-12">
+                                <ul class="spisok">
+                                    <li style="font-size: 14px">Имя: <span th:text="${f.getFileName()}"></span></li>
+                                    <li style="font-size: 14px">Дата: <span th:text="${f.getPlacedAt()}"></span></li> <!-- исправить на дату записи видео в базе -->
+                                    <li style="font-size: 14px">Размер файла: <span th:text="${f.getFileSize()}"></span></li> <!-- Размер сделать в гигабайтах -->
+                                </ul>
                             </div>
-                            <div class="small-6 column">
-                                <form th:method="POST" th:action="@{/admin/files/delete/{id}(id=${f.getId()})}">
-                                    <input class="alert small button" type="submit" value="Удалить">
-                                </form>
+                            <div class="small-12 row button-group" style="position: absolute; bottom: 10px">
+                                <div class="small-6 column">
+                                    <form th:method="POST" th:action="@{/admin/files/get/photo/{id}(id=${f.getId()})}">
+                                        <input type="submit" value="Фото" class="submit small button disabled" th:if="${f.getImages().size()} == 0">
+                                        <input type="submit" value="Фото" class="submit small button" th:if="${f.getImages().size()} != 0">
+                                    </form>
+                                </div>
+                                <div class="small-6 column">
+                                    <form th:method="POST" th:action="@{/admin/files/delete/{id}(id=${f.getId()})}">
+                                        <input class="alert small button" type="submit" value="Удалить">
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <!-- ELEMENT END -->
                 </div>
-                <!-- ELEMENT END -->
-            </div>
+                </div>
+
 
             <!-- Сложный элемент -->
             <div class="medium-6 columns">
